--- a/package.json
+++ b/package.json
@@ -5,12 +5,20 @@
     "ng": "ng",
     "start": "ng serve ",
     "build": "ng build",
+    "postinstall": "ng build --output-path angularapp -aot --prod",
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e"
   },
+  "engines": {
+    "node": "v8.11.4",
+    "npm": "5.8.0"
+  },
   "private": true,
   "dependencies": {
+    "typescript": "~3.8.3",
+    "@angular/cli": "~9.1.7",
+    "@angular/compiler-cli": "~9.1.9",
     "@angular/animations": "~9.1.9",
     "@angular/common": "~9.1.9",
     "@angular/compiler": "~9.1.9",
